z-index clash fix

--- a/client/src/styles/productReviewForm.scss
+++ b/client/src/styles/productReviewForm.scss
@@ -71,7 +71,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 99;
+    z-index: 50;
     font-size: 50px;
     opacity: 0;
     -moz-opacity: 0;
